--- a/Ceriyo.Toolset.WPF/App.xaml
+++ b/Ceriyo.Toolset.WPF/App.xaml
@@ -7,7 +7,7 @@
         <ResourceDictionary>
             
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/Ceriyo.Infrastructure.WPF;component/Templates/ErrorTemplate.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/Ceriyo.Infrastructure.WPF;component/Templates/ErrorTemplate.xaml"/> 
                 <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
@@ -15,6 +15,9 @@
                 <!-- Accent and AppTheme setting -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Red.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+                
+                <!-- Icons -->
+                <ResourceDictionary Source="/Resources/Icons.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
