Refresh area size when properties change. Load tileset on area opened. Stub out selectors for creatures, items, placeables, and tiles.

--- a/Ceriyo.Toolset.WPF/Views/BlueprintSelectorView/BlueprintSelector.xaml
+++ b/Ceriyo.Toolset.WPF/Views/BlueprintSelectorView/BlueprintSelector.xaml
@@ -5,10 +5,33 @@
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:tileSelectorView="clr-namespace:Ceriyo.Toolset.WPF.Views.TileSelectorView"
              mc:Ignorable="d"
              d:DesignWidth="300"
              d:DesignHeight="300">
     <Grid>
-        
+        <TabControl
+            IsEnabled="{Binding IsAreaOpened}">
+            <TabItem Header="Tiles"
+                     controls:ControlsHelper.HeaderFontSize="14">
+
+                <tileSelectorView:TileSelector></tileSelectorView:TileSelector>
+                
+            </TabItem>
+            <TabItem Header="Creatures"
+                     controls:ControlsHelper.HeaderFontSize="14">
+
+            </TabItem>
+            <TabItem Header="Placeables"
+                     controls:ControlsHelper.HeaderFontSize="14">
+
+            </TabItem>
+            <TabItem Header="Items"
+                     controls:ControlsHelper.HeaderFontSize="14">
+
+            </TabItem>
+
+        </TabControl>
     </Grid>
 </UserControl>
