Stand up ServerGame on background thread of server app. Establish action communication between UI and server logic.

--- a/Ceriyo.Server.WPF/Views/DetailsView/Details.xaml
+++ b/Ceriyo.Server.WPF/Views/DetailsView/Details.xaml
@@ -273,8 +273,9 @@
             Margin="10,4,5,4"
             Grid.Column="5"
             Grid.Row="10"
-            Command="{Binding StartServerCommand}">
-            Start Server
+            Command="{Binding ToggleServerCommand}"
+            Content="{Binding StartStopServerButtonText}">
+            
         </Button>
 
 
