UI cleanup, remove Arial10 font and replace with Segoe, add content files to MGCB file

--- a/Ceriyo.Tools.UIGenerator/Views/Dictionary.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/Dictionary.xaml
@@ -3,6 +3,6 @@
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:ek="clr-namespace:EmptyKeys.UserInterface.Designer;assembly=EmptyKeys.UserInterface.Designer">
 
-    <BitmapImage x:Key="Image" UriSource="/Images/CeriyoLogo.png" />
+    <BitmapImage x:Key="Image" UriSource="/UI/Images/CeriyoLogo.png" />
 
 </ResourceDictionary>
