--- a/Ceriyo.Tools.UIGenerator/Views/SettingsView.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/SettingsView.xaml
@@ -1,16 +1,15 @@
-﻿<ek:UIRoot x:Class="Ceriyo.Tools.UIGenerator.Views.DirectConnect"
+﻿<ek:UIRoot x:Class="Ceriyo.Tools.UIGenerator.Views.Settings"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:ek="clr-namespace:EmptyKeys.UserInterface.Designer;assembly=EmptyKeys.UserInterface.Designer"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Ceriyo.Tools.UIGenerator.Views"
+             xmlns:ek="clr-namespace:EmptyKeys.UserInterface.Designer;assembly=EmptyKeys.UserInterface.Designer"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="100"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="30"></RowDefinition>
             <RowDefinition Height="40"></RowDefinition>
@@ -24,62 +23,15 @@
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
-        <TextBlock
-                Grid.ColumnSpan="4"
-                Grid.Column="0"
+        <Image
                 Grid.Row="0"
-                HorizontalAlignment="Center"
-                Text="Direct Connect"
-                Margin="4,25,4,4">
-
-        </TextBlock>
-
-        <TextBlock
-                Text="IP Address: "
-                Grid.Column="0"
-                Grid.Row="1"
-                Margin="12,4,4,4">
-
-        </TextBlock>
-
-        <TextBox
                 Grid.Column="1"
-                Grid.Row="1"
-                Grid.ColumnSpan="2"
-                Text="{Binding IPAddress}">
+                Grid.ColumnSpan="3">
+            <Image.Source>
+                <BitmapImage UriSource="/UI/Images/Settings.png"></BitmapImage>
+            </Image.Source>
+        </Image>
 
-        </TextBox>
-
-
-        <TextBlock
-                Text="Port: "
-                Grid.Column="3"
-                Grid.Row="1"
-                Margin="12,4,4,4">
-
-        </TextBlock>
-
-        <ek:NumericTextBox
-                Grid.Column="4"
-                Grid.Row="1"
-                Value="{Binding Port}">
-
-        </ek:NumericTextBox>
-
-        <TextBlock
-                Text="Password: "
-                Grid.Column="0"
-                Grid.Row="2"
-                Margin="12,4,4,4">
-        </TextBlock>
-
-        <ek:PasswordBox
-                Grid.Column="1"
-                Grid.ColumnSpan="2"
-                Grid.Row="2"
-                Text="{Binding Password}">
-
-        </ek:PasswordBox>
 
         <Button
                 Grid.Row="3"
@@ -94,11 +46,12 @@
                 Grid.Row="3"
                 Grid.Column="1"
                 Grid.ColumnSpan="2"
-                Content="Connect"
+                Content="Save"
                 Margin="0,4,1,4"
-                Command="{Binding ConnectCommand}">
+                Command="{Binding SaveCommand}">
 
         </Button>
 
     </Grid>
 </ek:UIRoot>
+
