--- a/Ceriyo.Server.WPF/Views/DetailsView/Details.xaml
+++ b/Ceriyo.Server.WPF/Views/DetailsView/Details.xaml
@@ -69,7 +69,8 @@
             Grid.Column="2"
             Grid.Row="0"
             Text="{Binding Settings.ServerName}"
-            Grid.ColumnSpan="2">
+            Grid.ColumnSpan="2"
+            MaxLength="32">
         </TextBox>
 
         <Label
