--- a/Ceriyo.Tools.UIGenerator/Views/DirectConnectView.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/DirectConnectView.xaml
@@ -8,6 +8,13 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
 
+    <ek:UIRoot.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Ceriyo.Tools.UIGenerator;component/Views/Dictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </ek:UIRoot.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100"></RowDefinition>
