--- a/Ceriyo.Tools.UIGenerator/Views/CharacterSelectionView.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/CharacterSelectionView.xaml
@@ -8,6 +8,15 @@
              xmlns:converters="clr-namespace:Ceriyo.Infrastructure.WPF.Converters;assembly=Ceriyo.Infrastructure.WPF"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
+
+
+    <ek:UIRoot.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Ceriyo.Tools.UIGenerator;component/Views/Dictionary.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </ek:UIRoot.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -36,22 +45,13 @@
         
         <Button
             Grid.Row="2"
-            Grid.Column="0"
+            Grid.Column="1"
             Margin="1,1,1,1"
             Content="Create Character"
             Command="{Binding CreateCharacterCommand}">
 
         </Button>
 
-        <Button
-            Grid.Row="2"
-            Grid.Column="1"
-            Margin="1,1,1,1"
-            Content="Delete Character"
-            IsEnabled="{Binding IsCharacterDeletionEnabled}"
-            Command="{Binding DeleteCharacterCommand}">
-
-        </Button>
 
         <Button
             Grid.Row="2"
@@ -63,20 +63,16 @@
         </Button>
 
 
-            <ListBox
+        <ListBox
                 Grid.Column="0"
                 Grid.Row="1"
+                Grid.RowSpan="2"
                 SelectionMode="Single"
                 ItemsSource="{Binding PCs}"
                 SelectedItem="{Binding SelectedPC}">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Path=Name}">
-                        </TextBlock>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+        </ListBox>
 
+        
             <DockPanel
             Grid.Row="1"
             Grid.Column="1"
@@ -85,6 +81,7 @@
 
             <Grid>
                 <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="*"></ColumnDefinition>
@@ -99,11 +96,22 @@
                 <Button
                     Grid.Row="3"
                     Grid.Column="0"
-                    Grid.ColumnSpan="3"
+                    Grid.ColumnSpan="2"
                     Margin="1,1,1,1"
                     Content="Join Server"
                     Command="{Binding JoinServerCommand}">
                     
+                </Button>
+
+                <Button
+                    Grid.Row="3"
+                    Grid.Column="2"
+                    Grid.ColumnSpan="2"
+                    Margin="1,1,1,1"
+                    Content="Delete Character"
+                    IsEnabled="{Binding IsCharacterDeletionEnabled}"
+                    Command="{Binding DeleteCharacterCommand}">
+
                 </Button>
             </Grid>
             
