--- a/Ceriyo.Tools.UIGenerator/Views/Dictionary.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/Dictionary.xaml
@@ -1,6 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:ek="clr-namespace:EmptyKeys.UserInterface.Designer;assembly=EmptyKeys.UserInterface.Designer">
+                    xmlns:ek="clr-namespace:EmptyKeys.UserInterface.Designer;assembly=EmptyKeys.UserInterface.Designer"
+                    xmlns:data="clr-namespace:Ceriyo.Infrastructure.Network.TransferObjects;assembly=Ceriyo.Infrastructure">
 
+    <DataTemplate DataType="{x:Type data:PCTransferObject}">
+        <TextBlock Margin="5" Text="{Binding Name}" />
+    </DataTemplate>
 </ResourceDictionary>
