--- a/Ceriyo.Tools.UIGenerator/Views/Dictionary.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/Dictionary.xaml
@@ -4,6 +4,7 @@
                     xmlns:ek="clr-namespace:EmptyKeys.UserInterface.Designer;assembly=EmptyKeys.UserInterface.Designer"
                     xmlns:data="clr-namespace:Ceriyo.Infrastructure.Network.TransferObjects;assembly=Ceriyo.Infrastructure">
 
+    <!-- Data Objects -->
     <DataTemplate DataType="{x:Type data:PCTransferObject}">
         <TextBlock Margin="5" Text="{Binding Name}" />
     </DataTemplate>
