Fix binding for character selection list. Disable delete character button if server has option turned off.

--- a/Ceriyo.Tools.UIGenerator/Views/CharacterSelectionView.xaml
+++ b/Ceriyo.Tools.UIGenerator/Views/CharacterSelectionView.xaml
@@ -70,6 +70,12 @@
                 SelectionMode="Single"
                 ItemsSource="{Binding PCs}"
                 SelectedItem="{Binding SelectedPC}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Path=Name}">
+                    </TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
         </ListBox>
 
         
